// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`type_scatter_line 1`] = `
{
  "annotation": {},
  "chartType": "dualAxis",
  "config": {
    "dualAxis": {
      "annotation": {
        "annotationArea": {
          "areaBorderColor": "#BCC1CB",
          "areaBorderRadius": 0,
          "areaBorderWidth": 0,
          "areaColor": "#BCC1CB",
          "areaColorOpacity": 0.12,
          "areaLineDash": [
            2,
            2,
          ],
          "outerPadding": 4,
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 4,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
        "annotationHorizontalLine": {
          "endSymbolVisible": false,
          "lineColor": "#BCC1CB",
          "lineStyle": "solid",
          "lineVisible": true,
          "lineWidth": 1,
          "startSymbolVisible": true,
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
        "annotationPoint": {
          "textBackgroundBorderColor": "#3641594d",
          "textBackgroundBorderRadius": 4,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#364159",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
        "annotationVerticalLine": {
          "endSymbolVisible": false,
          "lineColor": "#BCC1CB",
          "lineStyle": "solid",
          "lineVisible": true,
          "lineWidth": 1,
          "startSymbolVisible": true,
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
      },
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "dualChartType": [
        {
          "primary": "scatter",
          "secondary": "line",
        },
      ],
      "label": {
        "enable": false,
        "labelColorSmartInvert": false,
        "labelOverlap": true,
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#6F6F6F",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rightTop",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "headerBackgroundColor": "#f6f7f9",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
      },
      "primaryYAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridLineDash": [
            4,
            2,
          ],
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "secondaryYAxis": {
        "grid": {
          "visible": false,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridLineDash": [
            4,
            2,
          ],
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
    },
  },
  "customTheme": {
    "config": {
      "dualAxis": {
        "annotation": {
          "annotationArea": {
            "areaBorderColor": "#BCC1CB",
            "areaBorderRadius": 0,
            "areaBorderWidth": 0,
            "areaColor": "#BCC1CB",
            "areaColorOpacity": 0.12,
            "areaLineDash": [
              2,
              2,
            ],
            "outerPadding": 4,
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 4,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
          "annotationHorizontalLine": {
            "endSymbolVisible": false,
            "lineColor": "#BCC1CB",
            "lineStyle": "solid",
            "lineVisible": true,
            "lineWidth": 1,
            "startSymbolVisible": true,
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
          "annotationPoint": {
            "textBackgroundBorderColor": "#3641594d",
            "textBackgroundBorderRadius": 4,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#364159",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
          "annotationVerticalLine": {
            "endSymbolVisible": false,
            "lineColor": "#BCC1CB",
            "lineStyle": "solid",
            "lineVisible": true,
            "lineWidth": 1,
            "startSymbolVisible": true,
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
        },
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "dualChartType": {
          "primary": "column",
          "secondary": "line",
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelOverlap": true,
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "headerBackgroundColor": "#f6f7f9",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        },
        "primaryYAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridLineDash": [
              4,
              2,
            ],
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "secondaryYAxis": {
          "grid": {
            "visible": false,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridLineDash": [
              4,
              2,
            ],
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
      },
    },
  },
  "dataset": [
    [
      {
        "__Dim_ColorId__": "中南-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "中南-sum(销售额)",
        "__Dim_Detail__": "中南-sum(销售额)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "2395179.3460000106",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "5991",
          "me_20250914101727_9d4f": "2395179.3460000106",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "5991",
        "me_20250914101727_9d4f": "2395179.3460000106",
      },
      {
        "__Dim_ColorId__": "东北-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "东北-sum(销售额)",
        "__Dim_Detail__": "东北-sum(销售额)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "1863283.821",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "4852",
          "me_20250914101727_9d4f": "1863283.821",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "4852",
        "me_20250914101727_9d4f": "1863283.821",
      },
      {
        "__Dim_ColorId__": "东北-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "东北-sum(销售额)",
        "__Dim_Detail__": "东北-sum(销售额)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "1298340.3229999975",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "2976",
          "me_20250914101727_9d4f": "1298340.3229999975",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2976",
        "me_20250914101727_9d4f": "1298340.3229999975",
      },
      {
        "__Dim_ColorId__": "西南-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "西南-sum(销售额)",
        "__Dim_Detail__": "西南-sum(销售额)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "1481964.9879999934",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "3802",
          "me_20250914101727_9d4f": "1481964.9879999934",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "3802",
        "me_20250914101727_9d4f": "1481964.9879999934",
      },
      {
        "__Dim_ColorId__": "中南-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "中南-sum(销售额)",
        "__Dim_Detail__": "中南-sum(销售额)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "2964133.059999989",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "6674",
          "me_20250914101727_9d4f": "2964133.059999989",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "6674",
        "me_20250914101727_9d4f": "2964133.059999989",
      },
      {
        "__Dim_ColorId__": "西北-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "西北-sum(销售额)",
        "__Dim_Detail__": "西北-sum(销售额)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "1198059.436000001",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "2281",
          "me_20250914101727_9d4f": "1198059.436000001",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "2281",
        "me_20250914101727_9d4f": "1198059.436000001",
      },
      {
        "__Dim_ColorId__": "华东-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "华东-sum(销售额)",
        "__Dim_Detail__": "华东-sum(销售额)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "3718172.451000012",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "8704",
          "me_20250914101727_9d4f": "3718172.451000012",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "8704",
        "me_20250914101727_9d4f": "3718172.451000012",
      },
      {
        "__Dim_ColorId__": "华北-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "华北-sum(销售额)",
        "__Dim_Detail__": "华北-sum(销售额)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "2019475.7170000044",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "4792",
          "me_20250914101727_9d4f": "2019475.7170000044",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "4792",
        "me_20250914101727_9d4f": "2019475.7170000044",
      },
      {
        "__Dim_ColorId__": "东北-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "东北-sum(销售额)",
        "__Dim_Detail__": "东北-sum(销售额)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "912951.4030000004",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "2055",
          "me_20250914101727_9d4f": "912951.4030000004",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2055",
        "me_20250914101727_9d4f": "912951.4030000004",
      },
      {
        "__Dim_ColorId__": "中南-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "中南-sum(销售额)",
        "__Dim_Detail__": "中南-sum(销售额)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "1356129.5789999985",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "3079",
          "me_20250914101727_9d4f": "1356129.5789999985",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "3079",
        "me_20250914101727_9d4f": "1356129.5789999985",
      },
      {
        "__Dim_ColorId__": "西南-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "西南-sum(销售额)",
        "__Dim_Detail__": "西南-sum(销售额)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "230624.96800000023",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "748",
          "me_20250914101727_9d4f": "230624.96800000023",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "748",
        "me_20250914101727_9d4f": "230624.96800000023",
      },
      {
        "__Dim_ColorId__": "西北-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "西北-sum(销售额)",
        "__Dim_Detail__": "西北-sum(销售额)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "369699.7640000004",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "1018",
          "me_20250914101727_9d4f": "369699.7640000004",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "1018",
        "me_20250914101727_9d4f": "369699.7640000004",
      },
      {
        "__Dim_ColorId__": "华东-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "华东-sum(销售额)",
        "__Dim_Detail__": "华东-sum(销售额)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "2748821.432000004",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "5254",
          "me_20250914101727_9d4f": "2748821.432000004",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "5254",
        "me_20250914101727_9d4f": "2748821.432000004",
      },
      {
        "__Dim_ColorId__": "华北-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "华北-sum(销售额)",
        "__Dim_Detail__": "华北-sum(销售额)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "938985.3690000006",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "1853",
          "me_20250914101727_9d4f": "938985.3690000006",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1853",
        "me_20250914101727_9d4f": "938985.3690000006",
      },
      {
        "__Dim_ColorId__": "华东-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "华东-sum(销售额)",
        "__Dim_Detail__": "华东-sum(销售额)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "1457499.204",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "3082",
          "me_20250914101727_9d4f": "1457499.204",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "3082",
        "me_20250914101727_9d4f": "1457499.204",
      },
      {
        "__Dim_ColorId__": "华北-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "华北-sum(销售额)",
        "__Dim_Detail__": "华北-sum(销售额)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "655606.930999999",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "1828",
          "me_20250914101727_9d4f": "655606.930999999",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1828",
        "me_20250914101727_9d4f": "655606.930999999",
      },
      {
        "__Dim_ColorId__": "西北-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "西北-sum(销售额)",
        "__Dim_Detail__": "西北-sum(销售额)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "123130.028",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "251",
          "me_20250914101727_9d4f": "123130.028",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "251",
        "me_20250914101727_9d4f": "123130.028",
      },
      {
        "__Dim_ColorId__": "西南-sum(销售额)-me_20250914101727_9d4f",
        "__Dim_Color__": "西南-sum(销售额)",
        "__Dim_Detail__": "西南-sum(销售额)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaPrimaryValue__": "1167314.5400000024",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "2146",
          "me_20250914101727_9d4f": "1167314.5400000024",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "2146",
        "me_20250914101727_9d4f": "1167314.5400000024",
      },
    ],
    [
      {
        "__Dim_ColorId__": "中南-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "中南-sum(数量)",
        "__Dim_Detail__": "中南-sum(数量)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "5991",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "5991",
          "me_20250914101727_9d4f": "2395179.3460000106",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "5991",
        "me_20250914101727_9d4f": "2395179.3460000106",
      },
      {
        "__Dim_ColorId__": "东北-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "东北-sum(数量)",
        "__Dim_Detail__": "东北-sum(数量)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "4852",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "4852",
          "me_20250914101727_9d4f": "1863283.821",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "4852",
        "me_20250914101727_9d4f": "1863283.821",
      },
      {
        "__Dim_ColorId__": "东北-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "东北-sum(数量)",
        "__Dim_Detail__": "东北-sum(数量)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "2976",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "2976",
          "me_20250914101727_9d4f": "1298340.3229999975",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2976",
        "me_20250914101727_9d4f": "1298340.3229999975",
      },
      {
        "__Dim_ColorId__": "西南-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "西南-sum(数量)",
        "__Dim_Detail__": "西南-sum(数量)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "3802",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "3802",
          "me_20250914101727_9d4f": "1481964.9879999934",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "3802",
        "me_20250914101727_9d4f": "1481964.9879999934",
      },
      {
        "__Dim_ColorId__": "中南-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "中南-sum(数量)",
        "__Dim_Detail__": "中南-sum(数量)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "6674",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "6674",
          "me_20250914101727_9d4f": "2964133.059999989",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "6674",
        "me_20250914101727_9d4f": "2964133.059999989",
      },
      {
        "__Dim_ColorId__": "西北-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "西北-sum(数量)",
        "__Dim_Detail__": "西北-sum(数量)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "2281",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "2281",
          "me_20250914101727_9d4f": "1198059.436000001",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "2281",
        "me_20250914101727_9d4f": "1198059.436000001",
      },
      {
        "__Dim_ColorId__": "华东-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "华东-sum(数量)",
        "__Dim_Detail__": "华东-sum(数量)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "8704",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "8704",
          "me_20250914101727_9d4f": "3718172.451000012",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "8704",
        "me_20250914101727_9d4f": "3718172.451000012",
      },
      {
        "__Dim_ColorId__": "华北-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "华北-sum(数量)",
        "__Dim_Detail__": "华北-sum(数量)",
        "__Dim_X__": "消费者",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "4792",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "4792",
          "me_20250914101727_9d4f": "2019475.7170000044",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "4792",
        "me_20250914101727_9d4f": "2019475.7170000044",
      },
      {
        "__Dim_ColorId__": "东北-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "东北-sum(数量)",
        "__Dim_Detail__": "东北-sum(数量)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "2055",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "2055",
          "me_20250914101727_9d4f": "912951.4030000004",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2055",
        "me_20250914101727_9d4f": "912951.4030000004",
      },
      {
        "__Dim_ColorId__": "中南-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "中南-sum(数量)",
        "__Dim_Detail__": "中南-sum(数量)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "3079",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "3079",
          "me_20250914101727_9d4f": "1356129.5789999985",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "3079",
        "me_20250914101727_9d4f": "1356129.5789999985",
      },
      {
        "__Dim_ColorId__": "西南-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "西南-sum(数量)",
        "__Dim_Detail__": "西南-sum(数量)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "748",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "748",
          "me_20250914101727_9d4f": "230624.96800000023",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "748",
        "me_20250914101727_9d4f": "230624.96800000023",
      },
      {
        "__Dim_ColorId__": "西北-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "西北-sum(数量)",
        "__Dim_Detail__": "西北-sum(数量)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "1018",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "1018",
          "me_20250914101727_9d4f": "369699.7640000004",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "1018",
        "me_20250914101727_9d4f": "369699.7640000004",
      },
      {
        "__Dim_ColorId__": "华东-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "华东-sum(数量)",
        "__Dim_Detail__": "华东-sum(数量)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "5254",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "5254",
          "me_20250914101727_9d4f": "2748821.432000004",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "5254",
        "me_20250914101727_9d4f": "2748821.432000004",
      },
      {
        "__Dim_ColorId__": "华北-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "华北-sum(数量)",
        "__Dim_Detail__": "华北-sum(数量)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "1853",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "1853",
          "me_20250914101727_9d4f": "938985.3690000006",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1853",
        "me_20250914101727_9d4f": "938985.3690000006",
      },
      {
        "__Dim_ColorId__": "华东-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "华东-sum(数量)",
        "__Dim_Detail__": "华东-sum(数量)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "3082",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "3082",
          "me_20250914101727_9d4f": "1457499.204",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "3082",
        "me_20250914101727_9d4f": "1457499.204",
      },
      {
        "__Dim_ColorId__": "华北-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "华北-sum(数量)",
        "__Dim_Detail__": "华北-sum(数量)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "1828",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "1828",
          "me_20250914101727_9d4f": "655606.930999999",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1828",
        "me_20250914101727_9d4f": "655606.930999999",
      },
      {
        "__Dim_ColorId__": "西北-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "西北-sum(数量)",
        "__Dim_Detail__": "西北-sum(数量)",
        "__Dim_X__": "小型企业",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "251",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "251",
          "me_20250914101727_9d4f": "123130.028",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "251",
        "me_20250914101727_9d4f": "123130.028",
      },
      {
        "__Dim_ColorId__": "西南-sum(数量)-me_20250914101727_1111",
        "__Dim_Color__": "西南-sum(数量)",
        "__Dim_Detail__": "西南-sum(数量)",
        "__Dim_X__": "公司",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaSecondaryValue__": "2146",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "2146",
          "me_20250914101727_9d4f": "1167314.5400000024",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "2146",
        "me_20250914101727_9d4f": "1167314.5400000024",
      },
    ],
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "me_20250914101727_9d4f": "sum(销售额)",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaPrimaryValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 18,
          "max": 3718172.451000012,
          "min": 123130.028,
          "sum": 26899372.36000001,
        },
      },
      "foldInfoList": [
        {
          "foldMap": {
            "me_20250914101727_9d4f": "sum(销售额)",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureValue": "__MeaPrimaryValue__",
          "statistics": {
            "colorMax": -Infinity,
            "colorMin": Infinity,
            "count": 18,
            "max": 3718172.451000012,
            "min": 123130.028,
            "sum": 26899372.36000001,
          },
        },
        {
          "foldMap": {
            "me_20250914101727_1111": "sum(数量)",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureValue": "__MeaSecondaryValue__",
          "statistics": {
            "colorMax": -Infinity,
            "colorMin": Infinity,
            "count": 18,
            "max": 8704,
            "min": 251,
            "sum": 61386,
          },
        },
      ],
      "id": "dualAxis",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "东北-sum(数量)-me_20250914101727_1111": "东北-sum(数量)",
          "东北-sum(销售额)-me_20250914101727_9d4f": "东北-sum(销售额)",
          "中南-sum(数量)-me_20250914101727_1111": "中南-sum(数量)",
          "中南-sum(销售额)-me_20250914101727_9d4f": "中南-sum(销售额)",
          "华东-sum(数量)-me_20250914101727_1111": "华东-sum(数量)",
          "华东-sum(销售额)-me_20250914101727_9d4f": "华东-sum(销售额)",
          "华北-sum(数量)-me_20250914101727_1111": "华北-sum(数量)",
          "华北-sum(销售额)-me_20250914101727_9d4f": "华北-sum(销售额)",
          "西北-sum(数量)-me_20250914101727_1111": "西北-sum(数量)",
          "西北-sum(销售额)-me_20250914101727_9d4f": "西北-sum(销售额)",
          "西南-sum(数量)-me_20250914101727_1111": "西南-sum(数量)",
          "西南-sum(销售额)-me_20250914101727_9d4f": "西南-sum(销售额)",
        },
        "colorItems": [
          "中南-sum(销售额)-me_20250914101727_9d4f",
          "东北-sum(销售额)-me_20250914101727_9d4f",
          "西南-sum(销售额)-me_20250914101727_9d4f",
          "西北-sum(销售额)-me_20250914101727_9d4f",
          "华东-sum(销售额)-me_20250914101727_9d4f",
          "华北-sum(销售额)-me_20250914101727_9d4f",
          "中南-sum(数量)-me_20250914101727_1111",
          "东北-sum(数量)-me_20250914101727_1111",
          "西南-sum(数量)-me_20250914101727_1111",
          "西北-sum(数量)-me_20250914101727_1111",
          "华东-sum(数量)-me_20250914101727_1111",
          "华北-sum(数量)-me_20250914101727_1111",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "细分",
      "autoFormat": true,
      "encoding": "angle",
      "id": "di_20250914101717_6266",
    },
    {
      "alias": "地区",
      "autoFormat": true,
      "encoding": "color",
      "id": "di_20250914101717_a7e4",
    },
    {
      "alias": "__MeaName__",
      "encoding": "color",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "di_20250914101717_a7e4",
      "__MeaName__",
    ],
    "detail": [
      "di_20250914101717_a7e4",
      "__MeaName__",
    ],
    "label": [],
    "tooltip": [
      "di_20250914101717_6266",
      "di_20250914101717_a7e4",
    ],
    "x": [
      "di_20250914101717_6266",
    ],
    "y": [],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "sum(销售额)",
      "children": [
        {
          "alias": "sum(销售额)",
          "autoFormat": false,
          "encoding": "radius",
          "format": {
            "auto": false,
            "kSep": true,
            "precision": 4,
            "precisionType": "significantDecimal",
            "type": "digit",
            "unit": null,
          },
          "id": "me_20250914101727_9d4f",
        },
      ],
      "id": "0-primary",
    },
    {
      "alias": "sum(数量)",
      "children": [
        {
          "alias": "sum(数量)",
          "autoFormat": false,
          "encoding": "radius",
          "format": {
            "auto": false,
            "kSep": true,
            "precision": null,
            "precisionType": null,
            "type": "none",
            "unit": null,
          },
          "id": "me_20250914101727_1111",
        },
      ],
      "id": "0-secondary",
    },
  ],
}
`;

exports[`type_scatter_line 2`] = `
{
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "细分",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "id": "dualAxis-primary-axis",
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "seriesId": "dualAxis-primary-series",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineDash": undefined,
          "lineWidth": undefined,
          "stroke": undefined,
        },
        "visible": false,
      },
      "id": "dualAxis-secondary-axis",
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "right",
      "seriesId": "dualAxis-secondary-series",
      "sync": {
        "axisId": "dualAxis-primary-axis",
        "zeroAlign": true,
      },
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "中南-sum(销售额)-me_20250914101727_9d4f",
      "东北-sum(销售额)-me_20250914101727_9d4f",
      "西南-sum(销售额)-me_20250914101727_9d4f",
      "西北-sum(销售额)-me_20250914101727_9d4f",
      "华东-sum(销售额)-me_20250914101727_9d4f",
      "华北-sum(销售额)-me_20250914101727_9d4f",
      "中南-sum(数量)-me_20250914101727_1111",
      "东北-sum(数量)-me_20250914101727_1111",
      "西南-sum(数量)-me_20250914101727_1111",
      "西北-sum(数量)-me_20250914101727_1111",
      "华东-sum(数量)-me_20250914101727_1111",
      "华北-sum(数量)-me_20250914101727_1111",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "labelLayout": "region",
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#6F6F6F",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#6F6F6F",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#6F6F6F",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "series": [
    {
      "animation": true,
      "area": {
        "style": {},
        "visible": true,
      },
      "bar": {
        "state": {
          "hover": {
            "fillOpacity": 0.6,
          },
        },
        "style": {
          "lineWidth": 1,
        },
      },
      "data": {
        "fields": {
          "__Dim_ColorId__": {
            "sortIndex": 0,
          },
          "__Dim_X__": {
            "sortIndex": 0,
          },
        },
        "id": "dualAxis-primary-dataset",
        "values": [
          {
            "__Dim_ColorId__": "中南-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "中南-sum(销售额)",
            "__Dim_Detail__": "中南-sum(销售额)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "2395179.3460000106",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "中南",
              "me_20250914101727_1111": "5991",
              "me_20250914101727_9d4f": "2395179.3460000106",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "中南",
            "me_20250914101727_1111": "5991",
            "me_20250914101727_9d4f": "2395179.3460000106",
          },
          {
            "__Dim_ColorId__": "东北-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "东北-sum(销售额)",
            "__Dim_Detail__": "东北-sum(销售额)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "1863283.821",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "东北",
              "me_20250914101727_1111": "4852",
              "me_20250914101727_9d4f": "1863283.821",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "东北",
            "me_20250914101727_1111": "4852",
            "me_20250914101727_9d4f": "1863283.821",
          },
          {
            "__Dim_ColorId__": "东北-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "东北-sum(销售额)",
            "__Dim_Detail__": "东北-sum(销售额)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "1298340.3229999975",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "东北",
              "me_20250914101727_1111": "2976",
              "me_20250914101727_9d4f": "1298340.3229999975",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "东北",
            "me_20250914101727_1111": "2976",
            "me_20250914101727_9d4f": "1298340.3229999975",
          },
          {
            "__Dim_ColorId__": "西南-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "西南-sum(销售额)",
            "__Dim_Detail__": "西南-sum(销售额)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "1481964.9879999934",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "西南",
              "me_20250914101727_1111": "3802",
              "me_20250914101727_9d4f": "1481964.9879999934",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "西南",
            "me_20250914101727_1111": "3802",
            "me_20250914101727_9d4f": "1481964.9879999934",
          },
          {
            "__Dim_ColorId__": "中南-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "中南-sum(销售额)",
            "__Dim_Detail__": "中南-sum(销售额)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "2964133.059999989",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "中南",
              "me_20250914101727_1111": "6674",
              "me_20250914101727_9d4f": "2964133.059999989",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "中南",
            "me_20250914101727_1111": "6674",
            "me_20250914101727_9d4f": "2964133.059999989",
          },
          {
            "__Dim_ColorId__": "西北-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "西北-sum(销售额)",
            "__Dim_Detail__": "西北-sum(销售额)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "1198059.436000001",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "西北",
              "me_20250914101727_1111": "2281",
              "me_20250914101727_9d4f": "1198059.436000001",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "西北",
            "me_20250914101727_1111": "2281",
            "me_20250914101727_9d4f": "1198059.436000001",
          },
          {
            "__Dim_ColorId__": "华东-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "华东-sum(销售额)",
            "__Dim_Detail__": "华东-sum(销售额)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "3718172.451000012",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "华东",
              "me_20250914101727_1111": "8704",
              "me_20250914101727_9d4f": "3718172.451000012",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "华东",
            "me_20250914101727_1111": "8704",
            "me_20250914101727_9d4f": "3718172.451000012",
          },
          {
            "__Dim_ColorId__": "华北-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "华北-sum(销售额)",
            "__Dim_Detail__": "华北-sum(销售额)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "2019475.7170000044",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "华北",
              "me_20250914101727_1111": "4792",
              "me_20250914101727_9d4f": "2019475.7170000044",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "华北",
            "me_20250914101727_1111": "4792",
            "me_20250914101727_9d4f": "2019475.7170000044",
          },
          {
            "__Dim_ColorId__": "东北-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "东北-sum(销售额)",
            "__Dim_Detail__": "东北-sum(销售额)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "912951.4030000004",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "东北",
              "me_20250914101727_1111": "2055",
              "me_20250914101727_9d4f": "912951.4030000004",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "东北",
            "me_20250914101727_1111": "2055",
            "me_20250914101727_9d4f": "912951.4030000004",
          },
          {
            "__Dim_ColorId__": "中南-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "中南-sum(销售额)",
            "__Dim_Detail__": "中南-sum(销售额)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "1356129.5789999985",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "中南",
              "me_20250914101727_1111": "3079",
              "me_20250914101727_9d4f": "1356129.5789999985",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "中南",
            "me_20250914101727_1111": "3079",
            "me_20250914101727_9d4f": "1356129.5789999985",
          },
          {
            "__Dim_ColorId__": "西南-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "西南-sum(销售额)",
            "__Dim_Detail__": "西南-sum(销售额)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "230624.96800000023",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "西南",
              "me_20250914101727_1111": "748",
              "me_20250914101727_9d4f": "230624.96800000023",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "西南",
            "me_20250914101727_1111": "748",
            "me_20250914101727_9d4f": "230624.96800000023",
          },
          {
            "__Dim_ColorId__": "西北-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "西北-sum(销售额)",
            "__Dim_Detail__": "西北-sum(销售额)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "369699.7640000004",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "西北",
              "me_20250914101727_1111": "1018",
              "me_20250914101727_9d4f": "369699.7640000004",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "西北",
            "me_20250914101727_1111": "1018",
            "me_20250914101727_9d4f": "369699.7640000004",
          },
          {
            "__Dim_ColorId__": "华东-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "华东-sum(销售额)",
            "__Dim_Detail__": "华东-sum(销售额)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "2748821.432000004",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "华东",
              "me_20250914101727_1111": "5254",
              "me_20250914101727_9d4f": "2748821.432000004",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "华东",
            "me_20250914101727_1111": "5254",
            "me_20250914101727_9d4f": "2748821.432000004",
          },
          {
            "__Dim_ColorId__": "华北-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "华北-sum(销售额)",
            "__Dim_Detail__": "华北-sum(销售额)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "938985.3690000006",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "华北",
              "me_20250914101727_1111": "1853",
              "me_20250914101727_9d4f": "938985.3690000006",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "华北",
            "me_20250914101727_1111": "1853",
            "me_20250914101727_9d4f": "938985.3690000006",
          },
          {
            "__Dim_ColorId__": "华东-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "华东-sum(销售额)",
            "__Dim_Detail__": "华东-sum(销售额)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "1457499.204",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "华东",
              "me_20250914101727_1111": "3082",
              "me_20250914101727_9d4f": "1457499.204",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "华东",
            "me_20250914101727_1111": "3082",
            "me_20250914101727_9d4f": "1457499.204",
          },
          {
            "__Dim_ColorId__": "华北-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "华北-sum(销售额)",
            "__Dim_Detail__": "华北-sum(销售额)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "655606.930999999",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "华北",
              "me_20250914101727_1111": "1828",
              "me_20250914101727_9d4f": "655606.930999999",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "华北",
            "me_20250914101727_1111": "1828",
            "me_20250914101727_9d4f": "655606.930999999",
          },
          {
            "__Dim_ColorId__": "西北-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "西北-sum(销售额)",
            "__Dim_Detail__": "西北-sum(销售额)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "123130.028",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "西北",
              "me_20250914101727_1111": "251",
              "me_20250914101727_9d4f": "123130.028",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "西北",
            "me_20250914101727_1111": "251",
            "me_20250914101727_9d4f": "123130.028",
          },
          {
            "__Dim_ColorId__": "西南-sum(销售额)-me_20250914101727_9d4f",
            "__Dim_Color__": "西南-sum(销售额)",
            "__Dim_Detail__": "西南-sum(销售额)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_9d4f",
            "__MeaName__": "sum(销售额)",
            "__MeaPrimaryValue__": "1167314.5400000024",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "西南",
              "me_20250914101727_1111": "2146",
              "me_20250914101727_9d4f": "1167314.5400000024",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "西南",
            "me_20250914101727_1111": "2146",
            "me_20250914101727_9d4f": "1167314.5400000024",
          },
        ],
      },
      "direction": "vertical",
      "id": "dualAxis-primary-series",
      "label": {
        "formatMethod": [Function],
        "overlap": {
          "clampForce": true,
          "hideOnHit": true,
        },
        "position": undefined,
        "smartInvert": false,
        "style": {
          "background": undefined,
          "fill": undefined,
          "fontSize": undefined,
          "fontWeight": undefined,
        },
        "visible": false,
        "zIndex": 1002,
      },
      "line": {
        "style": {},
      },
      "point": {
        "state": {
          "dimension_hover": {
            "outerBorder": {
              "distance": 2,
              "lineWidth": 4,
              "strokeOpacity": 0.25,
            },
            "scaleX": 1.4,
            "scaleY": 1.4,
          },
        },
        "style": {},
      },
      "seriesField": "__Dim_ColorId__",
      "tooltip": {
        "dimension": {
          "content": [
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
          ],
          "title": {
            "visible": true,
          },
        },
        "mark": {
          "content": [
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
          ],
          "title": {
            "visible": false,
          },
        },
        "visible": true,
      },
      "type": "scatter",
      "xField": "__Dim_X__",
      "yField": "__MeaPrimaryValue__",
      "zIndex": 1001,
    },
    {
      "animation": true,
      "area": {
        "style": {},
        "visible": true,
      },
      "bar": {
        "state": {
          "hover": {
            "fillOpacity": 0.6,
          },
        },
        "style": {
          "lineWidth": 1,
        },
      },
      "data": {
        "fields": {
          "__Dim_ColorId__": {
            "sortIndex": 0,
          },
          "__Dim_X__": {
            "sortIndex": 0,
          },
        },
        "id": "dualAxis-secondary-dataset",
        "values": [
          {
            "__Dim_ColorId__": "中南-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "中南-sum(数量)",
            "__Dim_Detail__": "中南-sum(数量)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "5991",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "中南",
              "me_20250914101727_1111": "5991",
              "me_20250914101727_9d4f": "2395179.3460000106",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "中南",
            "me_20250914101727_1111": "5991",
            "me_20250914101727_9d4f": "2395179.3460000106",
          },
          {
            "__Dim_ColorId__": "东北-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "东北-sum(数量)",
            "__Dim_Detail__": "东北-sum(数量)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "4852",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "东北",
              "me_20250914101727_1111": "4852",
              "me_20250914101727_9d4f": "1863283.821",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "东北",
            "me_20250914101727_1111": "4852",
            "me_20250914101727_9d4f": "1863283.821",
          },
          {
            "__Dim_ColorId__": "东北-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "东北-sum(数量)",
            "__Dim_Detail__": "东北-sum(数量)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "2976",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "东北",
              "me_20250914101727_1111": "2976",
              "me_20250914101727_9d4f": "1298340.3229999975",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "东北",
            "me_20250914101727_1111": "2976",
            "me_20250914101727_9d4f": "1298340.3229999975",
          },
          {
            "__Dim_ColorId__": "西南-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "西南-sum(数量)",
            "__Dim_Detail__": "西南-sum(数量)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "3802",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "西南",
              "me_20250914101727_1111": "3802",
              "me_20250914101727_9d4f": "1481964.9879999934",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "西南",
            "me_20250914101727_1111": "3802",
            "me_20250914101727_9d4f": "1481964.9879999934",
          },
          {
            "__Dim_ColorId__": "中南-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "中南-sum(数量)",
            "__Dim_Detail__": "中南-sum(数量)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "6674",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "中南",
              "me_20250914101727_1111": "6674",
              "me_20250914101727_9d4f": "2964133.059999989",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "中南",
            "me_20250914101727_1111": "6674",
            "me_20250914101727_9d4f": "2964133.059999989",
          },
          {
            "__Dim_ColorId__": "西北-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "西北-sum(数量)",
            "__Dim_Detail__": "西北-sum(数量)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "2281",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "西北",
              "me_20250914101727_1111": "2281",
              "me_20250914101727_9d4f": "1198059.436000001",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "西北",
            "me_20250914101727_1111": "2281",
            "me_20250914101727_9d4f": "1198059.436000001",
          },
          {
            "__Dim_ColorId__": "华东-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "华东-sum(数量)",
            "__Dim_Detail__": "华东-sum(数量)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "8704",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "华东",
              "me_20250914101727_1111": "8704",
              "me_20250914101727_9d4f": "3718172.451000012",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "华东",
            "me_20250914101727_1111": "8704",
            "me_20250914101727_9d4f": "3718172.451000012",
          },
          {
            "__Dim_ColorId__": "华北-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "华北-sum(数量)",
            "__Dim_Detail__": "华北-sum(数量)",
            "__Dim_X__": "消费者",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "4792",
            "__OriginalData__": {
              "di_20250914101717_6266": "消费者",
              "di_20250914101717_a7e4": "华北",
              "me_20250914101727_1111": "4792",
              "me_20250914101727_9d4f": "2019475.7170000044",
            },
            "di_20250914101717_6266": "消费者",
            "di_20250914101717_a7e4": "华北",
            "me_20250914101727_1111": "4792",
            "me_20250914101727_9d4f": "2019475.7170000044",
          },
          {
            "__Dim_ColorId__": "东北-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "东北-sum(数量)",
            "__Dim_Detail__": "东北-sum(数量)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "2055",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "东北",
              "me_20250914101727_1111": "2055",
              "me_20250914101727_9d4f": "912951.4030000004",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "东北",
            "me_20250914101727_1111": "2055",
            "me_20250914101727_9d4f": "912951.4030000004",
          },
          {
            "__Dim_ColorId__": "中南-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "中南-sum(数量)",
            "__Dim_Detail__": "中南-sum(数量)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "3079",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "中南",
              "me_20250914101727_1111": "3079",
              "me_20250914101727_9d4f": "1356129.5789999985",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "中南",
            "me_20250914101727_1111": "3079",
            "me_20250914101727_9d4f": "1356129.5789999985",
          },
          {
            "__Dim_ColorId__": "西南-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "西南-sum(数量)",
            "__Dim_Detail__": "西南-sum(数量)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "748",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "西南",
              "me_20250914101727_1111": "748",
              "me_20250914101727_9d4f": "230624.96800000023",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "西南",
            "me_20250914101727_1111": "748",
            "me_20250914101727_9d4f": "230624.96800000023",
          },
          {
            "__Dim_ColorId__": "西北-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "西北-sum(数量)",
            "__Dim_Detail__": "西北-sum(数量)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "1018",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "西北",
              "me_20250914101727_1111": "1018",
              "me_20250914101727_9d4f": "369699.7640000004",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "西北",
            "me_20250914101727_1111": "1018",
            "me_20250914101727_9d4f": "369699.7640000004",
          },
          {
            "__Dim_ColorId__": "华东-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "华东-sum(数量)",
            "__Dim_Detail__": "华东-sum(数量)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "5254",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "华东",
              "me_20250914101727_1111": "5254",
              "me_20250914101727_9d4f": "2748821.432000004",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "华东",
            "me_20250914101727_1111": "5254",
            "me_20250914101727_9d4f": "2748821.432000004",
          },
          {
            "__Dim_ColorId__": "华北-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "华北-sum(数量)",
            "__Dim_Detail__": "华北-sum(数量)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "1853",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "华北",
              "me_20250914101727_1111": "1853",
              "me_20250914101727_9d4f": "938985.3690000006",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "华北",
            "me_20250914101727_1111": "1853",
            "me_20250914101727_9d4f": "938985.3690000006",
          },
          {
            "__Dim_ColorId__": "华东-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "华东-sum(数量)",
            "__Dim_Detail__": "华东-sum(数量)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "3082",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "华东",
              "me_20250914101727_1111": "3082",
              "me_20250914101727_9d4f": "1457499.204",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "华东",
            "me_20250914101727_1111": "3082",
            "me_20250914101727_9d4f": "1457499.204",
          },
          {
            "__Dim_ColorId__": "华北-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "华北-sum(数量)",
            "__Dim_Detail__": "华北-sum(数量)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "1828",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "华北",
              "me_20250914101727_1111": "1828",
              "me_20250914101727_9d4f": "655606.930999999",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "华北",
            "me_20250914101727_1111": "1828",
            "me_20250914101727_9d4f": "655606.930999999",
          },
          {
            "__Dim_ColorId__": "西北-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "西北-sum(数量)",
            "__Dim_Detail__": "西北-sum(数量)",
            "__Dim_X__": "小型企业",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "251",
            "__OriginalData__": {
              "di_20250914101717_6266": "小型企业",
              "di_20250914101717_a7e4": "西北",
              "me_20250914101727_1111": "251",
              "me_20250914101727_9d4f": "123130.028",
            },
            "di_20250914101717_6266": "小型企业",
            "di_20250914101717_a7e4": "西北",
            "me_20250914101727_1111": "251",
            "me_20250914101727_9d4f": "123130.028",
          },
          {
            "__Dim_ColorId__": "西南-sum(数量)-me_20250914101727_1111",
            "__Dim_Color__": "西南-sum(数量)",
            "__Dim_Detail__": "西南-sum(数量)",
            "__Dim_X__": "公司",
            "__MeaId__": "me_20250914101727_1111",
            "__MeaName__": "sum(数量)",
            "__MeaSecondaryValue__": "2146",
            "__OriginalData__": {
              "di_20250914101717_6266": "公司",
              "di_20250914101717_a7e4": "西南",
              "me_20250914101727_1111": "2146",
              "me_20250914101727_9d4f": "1167314.5400000024",
            },
            "di_20250914101717_6266": "公司",
            "di_20250914101717_a7e4": "西南",
            "me_20250914101727_1111": "2146",
            "me_20250914101727_9d4f": "1167314.5400000024",
          },
        ],
      },
      "direction": "vertical",
      "id": "dualAxis-secondary-series",
      "label": {
        "formatMethod": [Function],
        "overlap": {
          "clampForce": true,
          "hideOnHit": true,
        },
        "position": undefined,
        "smartInvert": false,
        "style": {
          "background": undefined,
          "fill": undefined,
          "fontSize": undefined,
          "fontWeight": undefined,
        },
        "visible": false,
        "zIndex": 1002,
      },
      "line": {
        "style": {},
      },
      "point": {
        "state": {
          "dimension_hover": {
            "outerBorder": {
              "distance": 2,
              "lineWidth": 4,
              "strokeOpacity": 0.25,
            },
            "scaleX": 1.4,
            "scaleY": 1.4,
          },
        },
        "style": {},
      },
      "seriesField": "__Dim_ColorId__",
      "tooltip": {
        "dimension": {
          "content": [
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
          ],
          "title": {
            "visible": true,
          },
        },
        "mark": {
          "content": [
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
          ],
          "title": {
            "visible": false,
          },
        },
        "visible": true,
      },
      "type": "line",
      "xField": "__Dim_X__",
      "yField": "__MeaSecondaryValue__",
      "zIndex": 1001,
    },
  ],
  "type": "common",
}
`;

exports[`type_scatter_line 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "东北-sum(数量)-me_20250914101727_1111": "东北-sum(数量)",
    "东北-sum(销售额)-me_20250914101727_9d4f": "东北-sum(销售额)",
    "中南-sum(数量)-me_20250914101727_1111": "中南-sum(数量)",
    "中南-sum(销售额)-me_20250914101727_9d4f": "中南-sum(销售额)",
    "华东-sum(数量)-me_20250914101727_1111": "华东-sum(数量)",
    "华东-sum(销售额)-me_20250914101727_9d4f": "华东-sum(销售额)",
    "华北-sum(数量)-me_20250914101727_1111": "华北-sum(数量)",
    "华北-sum(销售额)-me_20250914101727_9d4f": "华北-sum(销售额)",
    "西北-sum(数量)-me_20250914101727_1111": "西北-sum(数量)",
    "西北-sum(销售额)-me_20250914101727_9d4f": "西北-sum(销售额)",
    "西南-sum(数量)-me_20250914101727_1111": "西南-sum(数量)",
    "西南-sum(销售额)-me_20250914101727_9d4f": "西南-sum(销售额)",
  },
  "colorItems": [
    {
      "alias": "中南-sum(销售额)",
      "id": "中南-sum(销售额)-me_20250914101727_9d4f",
    },
    {
      "alias": "东北-sum(销售额)",
      "id": "东北-sum(销售额)-me_20250914101727_9d4f",
    },
    {
      "alias": "西南-sum(销售额)",
      "id": "西南-sum(销售额)-me_20250914101727_9d4f",
    },
    {
      "alias": "西北-sum(销售额)",
      "id": "西北-sum(销售额)-me_20250914101727_9d4f",
    },
    {
      "alias": "华东-sum(销售额)",
      "id": "华东-sum(销售额)-me_20250914101727_9d4f",
    },
    {
      "alias": "华北-sum(销售额)",
      "id": "华北-sum(销售额)-me_20250914101727_9d4f",
    },
    {
      "alias": "中南-sum(数量)",
      "id": "中南-sum(数量)-me_20250914101727_1111",
    },
    {
      "alias": "东北-sum(数量)",
      "id": "东北-sum(数量)-me_20250914101727_1111",
    },
    {
      "alias": "西南-sum(数量)",
      "id": "西南-sum(数量)-me_20250914101727_1111",
    },
    {
      "alias": "西北-sum(数量)",
      "id": "西北-sum(数量)-me_20250914101727_1111",
    },
    {
      "alias": "华东-sum(数量)",
      "id": "华东-sum(数量)-me_20250914101727_1111",
    },
    {
      "alias": "华北-sum(数量)",
      "id": "华北-sum(数量)-me_20250914101727_1111",
    },
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
